# akasha-core

./: LICENSE.en.md  LICENSE.es.md  LICENSE.md  LICENSE.zh.md  README.en.md  README.es.md  README.md  README.zh.md  pyproject.toml
.cursor/: hooks.json
.cursor/hooks/: akash-prepare-gate.py  akash-session-start.py
.cursor/rules/: akasha-lifecycle.mdc
adapters/_template/: harvest-sources.yaml
akash_core/: __init__.py  __main__.py  adapter.py  backend.py  brain.py  capabilities.py  cli.py  cli_resolve.py  config.py  github_brain.py  harvest.py  hooks_gate.py  merge_sync.py  nav.py  nav_map.py  nav_tokens.py  nav_weave.py  onboard.py  project_harvest.py  session.py  session_lock.py  skill_create.py  skill_laws.py  token_stats.py  upp.py  weave_brief.py
akash_core/templates/brain/adapters/cursor/: adapter.yaml  bootstrap.md  harvest-sources.yaml  hooks.template.json  inject.md  mcp.template.json
akash_core/templates/brain/skills/akasha-bootstrap/: SKILL.md
akasha_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: AGENT-ONBOARDING.en.md  AGENT-ONBOARDING.es.md  AGENT-ONBOARDING.ru.md  AGENT-ONBOARDING.zh.md  AKASHA-INSTRUCTIONS.en.md  AKASHA-INSTRUCTIONS.es.md  AKASHA-INSTRUCTIONS.ru.md  AKASHA-INSTRUCTIONS.zh.md
docs/skills/: akasha-create-skill-cli.SKILL.md
scripts/: bootstrap.sh
tests/: test_github_brain.py  test_nav_map.py  test_onboard_harvest.py  test_prepare_gate.py  test_project_harvest.py  test_scaffold_basic.py
