 [build-system]
 requires = ["setuptools>=64", "wheel"]
 build-backend = "setuptools.build_meta"

 [project]
 name = "akasha-core"
 version = "0.1.0"
 description = "AKASHA core CLI and library implementing akash-core v1 as specified in AKASHA-TZ."
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
   "PyYAML>=6.0",
 ]

 [project.scripts]
 akash = "akash_core.cli:main"

 [tool.setuptools.packages.find]
 where = ["."]

 [tool.setuptools.package-data]
 akash_core = ["templates/brain/**/*"]
